fixed small screen menu not collapsing on click by removing styles; geolocation not working yet

--- a/src/styles/EventPage.module.css
+++ b/src/styles/EventPage.module.css
@@ -19,7 +19,8 @@
 .eventGrid {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-	margin-top: 1rem;
+	margin: 1rem auto;
+	max-width: 200px;
 }
 .eventHead {
 	display: flex;
